--- a/src/pages/politica-de-privacidade.astro
+++ b/src/pages/politica-de-privacidade.astro
@@ -6,14 +6,14 @@ import { baseURL } from "../config";
 ---
 <head>
 	<SEO
-		title="Política de Privacidade | Janus Educare"
+		title="Política de Privacidade | Plataforma Athena"
 		description="Nosso foco é simplificar a burocracia e potencializar seus resultados, levando seu programa a conquistar reconhecimento nacional e internacional."
 		charset="utf-8"
 		openGraph={{
 			basic: {
-				title: "Política de Privacidade | Janus Educare",
+				title: "Política de Privacidade | Plataforma Athena",
 				type: "",
-				image: `${baseURL}/assets/img/janus-logo-horizontal.webp`,
+				image: `${baseURL}/assets/img/logo-plataforma-athena.png`,
 			}
 		}}
 
