--- a/src/pages/termos-de-uso.astro
+++ b/src/pages/termos-de-uso.astro
@@ -6,14 +6,14 @@ import { baseURL } from "../config";
 ---
 <head>
 	<SEO
-		title="Termos de Uso | Janus Educare"
+		title="Termos de Uso | Plataforma Athena"
 		description="Nosso foco é simplificar a burocracia e potencializar seus resultados, levando seu programa a conquistar reconhecimento nacional e internacional."
 		charset="utf-8"
 		openGraph={{
 			basic: {
-				title: "Termos de Uso | Janus Educare",
+				title: "Termos de Uso | Plataforma Athena",
 				type: "",
-				image: `${baseURL}/assets/img/janus-logo-horizontal.webp`,
+				image: `${baseURL}/assets/img/logo-plataforma-athena.png`,
 			}
 		}}
 
