Ajustando textos e removendo CSS não utilizado

--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -8,8 +8,9 @@ import FormContato from "./FormContato.astro";
     <div class="lg:grid lg:grid-cols-2 max-w-6xl mx-auto gap-20">
       <div>
   
-          <p>
-            Ficou com alguma dúvida? Entre em contato com nossa equipe agora mesmo e agenda uma demonstração. </p>
+          <p>Ficou com alguma dúvida?<br>
+          Quer saber como funcionam nossa assessoria e workshops?<br>
+          Entre em contato com nossa equipe agora mesmo que iremos te auxiliar.</p>
 
           <dl class="mt-10 mb-10 lg:mb-0 grid gap-y-4 space-y-2">
             <div>
