Remoção de componentes não utilizados

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,8 +22,7 @@ const {conteudoLegal} = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/png" href=`${baseURL}/favicon.png` />
-		<meta name="generator" content={Astro.generator} />
-		<title>Janus Educare</title>
+		<title>Plataforma Athena</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
@@ -55,8 +54,6 @@ const {conteudoLegal} = Astro.props;
 		<script is:inline src=`${baseURL}/vendors/gsap/ScrollTrigger.min.js`></script>
 		<script is:inline src=`${baseURL}/vendors/gsap/ScrollToPlugin.min.js`></script>
 		<script is:inline src=`${baseURL}/vendors/gsap/ScrollSmoother.min.js`></script>
-		<!-- <script is:inline src="https://unpkg.com/@popperjs/core@2"></script>
-		<script is:inline src="https://unpkg.com/tippy.js@6"></script> -->
 		<script is:inline src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 		<script is:inline src=`${baseURL}/vendors/jquery-validate/jquery.validate.min.js`></script>
 		<script is:inline src=`${baseURL}/vendors/jquery-mask/jquery.mask.min.js`></script>
@@ -64,8 +61,6 @@ const {conteudoLegal} = Astro.props;
 		<script is:inline type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 		<script is:inline src="https://www.google.com/recaptcha/api.js" async defer></script>		
 		<script is:inline src=`${baseURL}/js/form-validation.js`></script>
-
-
 
 	</body>
 </html>
